# mypa

./: .gitignore  pyproject.toml
src/myma/: __init__.py  main.py  pyproject.py
tests/example_package/: pyproject.toml
